@@ -17,6 +17,7 @@
  * Explain what RSpec name and description are. (#420)
  * Link to the GENI Glossary to explain project and slice roles. (#558)
  * Change subject on project join request email (fix grammar). (#1083)
+ * Warn on missing slice name to createslice. (#1028)
 
 == 2.17.1 ==
  * Allow the OpenID WiMAX username attribute to be wimax/wimax_username. (#1097)
